<resources>
    <string name="app_name">ShareRide</string>
    <string name="title_activity_map">Map</string>
    <string name="map">MAP</string>
    <string name="toast_map_warning">You have already placed start and end!</string>
    <string name="confirm_button_text">Confirm!</string>
    <string name="check_button_text">Check availability</string>
    <string name="check">Check route</string>
    <string name="cancel">Cancel</string>
    <string name="fragment_route_details_number_of_seats">Choose the number of seats</string>
    <string name="fragment_route_details_date">Choose the date</string>
    <string name="fragment_route_details_time">Choose the time</string>
    <string name="fragment_route_details_number_of_seats_feedback">Chosen number:</string>
    <string name="fragment_route_details_date_feedback">Chosen date:</string>
    <string name="fragment_route_details_time_feedback">Chosen time:</string>
    <string name="fragment_route_details_deliverytime">Delivery time</string>
    <string name="fragment_route_details_arrivaltime">Arrival time</string>
    <string name="fragment_route_details_pickuptime">Pickup time</string>
    <string name="input_not_valid">Validate input</string>
    <string name="activity_login_btn_login">login</string>
    <string name="activity_login_tv_signup">No account yet? Create one</string>
    <string name="input_password">Password</string>
    <string name="input_email">Email</string>
    <string name="toast_complete_form">Complete the form</string>
    <string name="dialog_logging_in">Logging in…</string>
    <string name="activity_login_auth_failed">Login failed, try again later</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="activity_signup_tv_login">Already a member? Login</string>
    <string name="activity_signup_btn_signup">Create Account</string>
    <string name="input_name">Name</string>
    <string name="dialog_authenticating">Authenticating…</string>
    <string name="activity_signup_registration_failed">Registration failed, try again later</string>
    <string name="toast_login_ok">Login successful</string>
    <string name="dialog_path_available">Path available!</string>
    <string name="dialog_checking">Checking…</string>
    <string name="dialog_path_not_available">Path not available!</string>
    <string name="dialog_confirming">Confirming…</string>
    <string name="toast_path_confirmed">Path confirmed!</string>
    <string name="toast_error">An error occurred!</string>
    <string name="listitem_user_request_tv_date_label">Date:</string>
    <string name="title_activity_user_request">User Requests</string>
    <string name="dialog_loading">Loading…</string>
    <string name="title_activity_map_request_detail">Request detail</string>
    <string name="listitem_user_request_tv_pickup_label">Pickup</string>
    <string name="listitem_user_request_tv_delivery_label">Delivery</string>
    <string name="listitem_user_request_tv_time_label">Time</string>
    <string name="listitem_user_request_tv_address_label">Address</string>
</resources>
