<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_route_details_tv_number_of_seats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_route_details_number_of_seats"
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/fragment_route_details_numberpicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_route_details_tv_datepicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_route_details_date"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/fragment_route_details_datepicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="DatePicker"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_route_details_tv_timepicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_route_details_time"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/fragment_route_details_timepicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TimePicker"
            />
    </LinearLayout>


</LinearLayout>