<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/listitem_user_request_tv_pickup_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listitem_user_request_tv_pickup_label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listitem_user_request_tv_pickup_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/listitem_user_request_tv_date_label"/>

            <TextView
                android:id="@+id/listitem_user_request_tv_pickup_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listitem_user_request_tv_pickup_time_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/listitem_user_request_tv_time_label"/>

            <TextView
                android:id="@+id/listitem_user_request_tv_pickup_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listitem_user_request_tv_pickup_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/listitem_user_request_tv_address_label"/>

            <TextView
                android:id="@+id/listitem_user_request_tv_pickup_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/listitem_user_request_tv_delivery_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listitem_user_request_tv_delivery_label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listitem_user_request_tv_delivry_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listitem_user_request_tv_date_label"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/listitem_user_request_tv_delivery_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listitem_user_request_tv_delivery_time_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listitem_user_request_tv_time_label"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/listitem_user_request_tv_delivery_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listitem_user_request_tv_delivery_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listitem_user_request_tv_address_label"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/listitem_user_request_tv_delivery_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>